--- a/model-service/requirements.txt
+++ b/model-service/requirements.txt
@@ -2,4 +2,6 @@ Flask==3.0.0
 numpy==1.26.0
 transformers==4.34.0
 torch==2.1.0
-Flask-Cors==4.0.0
+llama-index==0.8.40
+langchain==0.0.310
+ctransformers==0.2.27
