--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.8.1",
     "axios": "^1.5.1",
     "react": "^18.2.0",
+    "react-countdown-clock": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0"
